--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <link href="./assets/buttons.css" rel="stylesheet" type="text/css">
 <link href="./assets/header.css" rel="stylesheet" type="text/css">
 <script type="text/javascript" async="" src="./assets/ga.js"></script><script type="text/javascript" src="./assets/prototype-1.7.js"></script><style type="text/css"></style>
-<script type="text/javascript" src="./assets/_combined.js"></script>
+<script type="text/javascript" src="./assets/combined.js"></script>
 <script type="text/javascript" src="./assets/global.js"></script>
 <script type="text/javascript" src="./assets/jquery-1.11.1.min.js"></script>
 <script type="text/javascript" src="./assets/tooltip.js"></script>
